// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Header correctly 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb"
    class="govuk-breadcrumbs"
  >
    <ol
      class="govuk-breadcrumbs__list"
    >
      <li
        class="govuk-breadcrumbs__list-item"
      >
        <a
          class="govuk-breadcrumbs__link"
        >
          Home
        </a>
      </li>
      <li
        class="govuk-breadcrumbs__list-item"
      >
        <a
          class="govuk-breadcrumbs__link"
        >
          All Tasks
        </a>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`renders Header correctly 2`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb"
    class="govuk-breadcrumbs"
  >
    <ol
      class="govuk-breadcrumbs__list"
    >
      <li
        class="govuk-breadcrumbs__list-item"
      >
        <a
          class="govuk-breadcrumbs__link"
        >
          Home
        </a>
      </li>
      <li
        class="govuk-breadcrumbs__list-item"
      >
        <a
          class="govuk-breadcrumbs__link"
        >
          Create Task
        </a>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
